grub2 (1.99~20110112-1) UNRELEASED; urgency=low

  * New Bazaar snapshot.
    - Disable ieee1275_fb on sparc (closes: #560823).
    - Fix pf2 font generation on big-endian platforms (closes: #609818).

 -- Colin Watson <cjwatson@debian.org>  Wed, 12 Jan 2011 23:49:33 +0000

grub2 (1.99~20110111-1) experimental; urgency=low

  * New Bazaar snapshot.
    - Don't check amount of low memory, as reportedly INT 12h can be broken
      and if low memory is too low we wouldn't have gotten into
      grub_machine_init anyway (closes: #588293, LP: #513528).
    - Submenu default support (LP: #691878).
    - Fix optimisation-dependent grub-mklayout crash (closes: #609584).
  * branch_butter.patch: Don't free an uninitialised pointer if /proc is
    unmounted (LP: #697493).
  * Add a po/LINGUAS file listing the translations we've synced from the TP
    (closes: #609671).

 -- Colin Watson <cjwatson@debian.org>  Tue, 11 Jan 2011 17:11:44 +0000

grub2 (1.99~20110106-1) experimental; urgency=low

  * New Bazaar snapshot.
    - Check that named RAID array devices exist before using them (closes:
      #606035).
    - Clear terminfo output on initialisation (closes: #569678).
    - Fix grub-probe when btrfs is on / without a separate /boot.

 -- Colin Watson <cjwatson@debian.org>  Thu, 06 Jan 2011 13:38:57 +0000

grub2 (1.99~20110104-2) experimental; urgency=low

  * Support long command lines as per the 2.06 Linux boot protocol, from the
    upstream 'longlinuxcmd' branch.
  * Add a background_color command, from the upstream 'parse-color' branch.
  * Update branch_devmapper.patch, adding a #include to fix a build failure
    on Ubuntu amd64.
  * When embedding the core image in a post-MBR gap, check for and avoid
    sectors matching any of a number of known signatures, from the upstream
    'embed-sectors' branch.

 -- Colin Watson <cjwatson@debian.org>  Wed, 05 Jan 2011 13:31:05 +0000

grub2 (1.99~20110104-1) experimental; urgency=low

  * New Bazaar snapshot.