@@ -3,6 +3,9 @@ grub2 (1.99~20110112-1) UNRELEASED; urgency=low
   * New Bazaar snapshot.
     - Disable ieee1275_fb on sparc (closes: #560823).
     - Fix pf2 font generation on big-endian platforms (closes: #609818).
+  * branch_butter.patch: Resolve the device returned by
+    grub_find_root_device_from_mountinfo or find_root_device_from_libzfs
+    using grub_find_device (closes: #609590, #609814, LP: #700147).
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 12 Jan 2011 23:49:33 +0000
 
